--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
-h1 {
-    color: green;
-}
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./layout/layout";
+@import "./base/base";
+@import "./pages/accueil";
