--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,43 @@
-h1 {
-    color: red;
+/*     polices     */
+$fontfam-title: "Shrikhand";
+$fontfam-text: "Roboto";
+
+/*     couleurs     */
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
+$background-dark: #353535;
+$background-medium: #eaeaea;
+$background-light: #f6f6f6;
+
+@mixin font-title {
+  font-family: $fontfam-title;
+  font-size: 2rem;
+  text-align: center;
+}
+span,
+p,
+h2,
+h3 {
+  font-family: $fontfam-text;
+}
+h2 {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+p {
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: rgb(95, 94, 94);
+}
+
+@mixin button-style {
+  font-size: 1rem;
+  font-weight: 400;
+  color: white;
+  border-radius: 3rem;
+  background: radial-gradient(ellipse farthest-corner at top left, $color-secondary, $color-primary);
+  border: none;
+  box-shadow: 0px 2px 4px gray;
+  padding: 1rem 1.5rem;
 }
