--- a/sass/layout/layout.scss
+++ b/sass/layout/layout.scss
@@ -1,14 +1,5 @@
-/*     aide mise en forme de base     */
-form, div {
-    border: 1px solid $color-primary;
-}
 
-.restaurants {
-    background-color: lawngreen;
-}
-.restaurant {
-    background-color: lightpink;
-}
+
 body {
     display: flex;
     flex-direction: column;
@@ -16,4 +7,31 @@ body {
 h1 {
     @include font-title;
     margin: 0.5rem auto;
+}
+a {
+    text-decoration: none;
+}
+li {
+    list-style: none;
+}
+footer {
+    background-color: $color-darkest;
+    color: white;
+    h3 {
+        font-family: $fontfam-title;
+        font-size: 1.3rem;
+        font-weight: 200;
+        padding-left: 2rem;
+    }
+    li {
+        font-size: 1rem;
+        padding-bottom: 0.5rem;
+        a {
+        color: white;}
+        i {
+            font-size: 0.9rem;
+            padding-right: 1rem;
+            width: 0.5rem;
+        }
+    }
 }
