--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 span,
 p,
 h2,
-h3 {
-  font-family: "Roboto";
+h3,
+li {
+  font-family: "Roboto", "sans-serif";
 }
 
 h2 {
@@ -20,56 +21,75 @@ p {
   color: #5f5e5e;
 }
 
-/*     aide mise en forme de base     */
-form, div {
-  border: 1px solid #9356dc;
-}
-
-.restaurants {
-  background-color: lawngreen;
-}
-
-.restaurant {
-  background-color: lightpink;
-}
-
 body {
   display: flex;
   flex-direction: column;
 }
 
 h1 {
-  font-family: "Shrikhand";
+  font-family: "Shrikhand", "sans-serif";
   font-size: 2rem;
   text-align: center;
   margin: 0.5rem auto;
 }
 
-.location {
-  font-weight: 600;
-  box-shadow: inset 0 2px 4px #c9c8c8;
-  background-color: #eaeaea;
-  text-align: center;
+a {
+  text-decoration: none;
 }
 
-.fa-map-marker-alt {
+li {
+  list-style: none;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+}
+footer h3 {
+  font-family: "Shrikhand", "sans-serif";
+  font-size: 1.3rem;
+  font-weight: 200;
+  padding-left: 2rem;
+}
+footer li {
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
+}
+footer li a {
+  color: white;
+}
+footer li i {
+  font-size: 0.9rem;
+  padding-right: 1rem;
+  width: 0.5rem;
+}
+
+.location {
+  font-weight: 600;
+  box-shadow: inset 0 3px 2px #cecece;
+  background-color: #e8e8e8;
+  text-align: center;
+}
+.location .fa-map-marker-alt {
   font-weight: 800;
   font-size: 1.2rem;
-  padding: 1rem 1rem;
+  padding: 1rem 0.8rem;
+}
+.location span {
+  padding-right: 2.5rem;
 }
 
 .explorer {
-  background-color: #f6f6f6;
-  padding-bottom: 3rem;
-  margin-bottom: 1rem;
+  background-color: #f4f4f4;
+  padding-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
   text-align: center;
 }
 .explorer h2 {
   padding-top: 2.5rem;
-  margin: 0;
 }
 .explorer p {
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
 }
 .explorer button {
   font-size: 1rem;
@@ -78,7 +98,7 @@ h1 {
   border-radius: 3rem;
   background: radial-gradient(ellipse farthest-corner at top left, #ff79da, #9356dc);
   border: none;
-  box-shadow: 0px 2px 4px gray;
+  box-shadow: 0px 4px 4px #e8e8e8;
   padding: 1rem 1.5rem;
 }
 
@@ -86,20 +106,27 @@ h1 {
   display: flex;
   flex-direction: column;
 }
+.steps h2 {
+  padding-left: 1rem;
+}
 .steps button {
-  background-color: #f6f6f6;
+  background-color: #f4f4f4;
   position: relative;
   border-radius: 1.5rem;
   height: 5rem;
-  margin: 0.5rem 2rem;
-  box-shadow: 0 6px 6px #eaeaea;
+  margin: 0.7rem 2rem;
+  box-shadow: 0 6px 6px #e8e8e8;
   border: none;
   font-size: 1rem;
   font-weight: 800;
 }
 .steps button i {
   color: gray;
-  font-size: 1.5;
+  font-size: 1.3rem;
+  padding-right: 1rem;
+}
+.steps button span {
+  padding-right: 2rem;
 }
 .steps button .step-number {
   position: absolute;
@@ -111,6 +138,62 @@ h1 {
   color: white;
   font-size: 0.9rem;
   font-weight: 400;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
+  justify-content: flex-around;
+}
+.restaurants h2 {
+  padding-left: 1rem;
+}
+.restaurants .restaurants__form {
+  position: relative;
+  border-radius: 1rem;
+  margin: 0 1rem 1rem 1rem;
+  background-color: white;
+  box-shadow: 0px 2px 12px 4px #e8e8e8;
+  text-decoration: none;
+}
+.restaurants .restaurants__form .restaurant__describ {
+  padding-left: 1rem;
+}
+.restaurants .restaurants__form h3 {
+  font-weight: bold;
+  color: black;
+  margin-bottom: 0.5rem;
+}
+.restaurants .restaurants__form p {
+  margin-top: 0;
+}
+.restaurants .restaurants__form .fa-heart {
+  position: absolute;
+  right: 1.5rem;
+  bottom: 2rem;
+  font-size: 1.5rem;
+  color: black;
+}
+.restaurants .restaurant__picture {
+  height: 12rem;
+  border-radius: 0.8rem 0.8rem 0 0;
+  background-size: cover;
+  background-position: center;
+}
+.restaurants .picture1 {
+  background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+.restaurants .picture2 {
+  background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+.restaurants .picture3 {
+  background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+}
+.restaurants .picture4 {
+  background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 
 /*# sourceMappingURL=style.css.map */
