realisation des hover sur boutons, steps et coeurs

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,7 +5,7 @@ $fontfam-text: "Roboto", 'sans-serif';
 /*     couleurs     */
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
-$color-tertiary: #99e2d0;
+$color-tertiary: hsl(165, 56%, 74%);
 $color-darkest: #353535;
 $color-medium: lighten($color-darkest, 70);
 $color-light: lighten($color-darkest, 75);
@@ -21,24 +21,46 @@ h2,
 h3,
 li {
   font-family: $fontfam-text;
+  color: black;
 }
 h2 {
   font-size: 1.5rem;
   font-weight: 800;
 }
-p {
-  font-weight: 400;
-  font-size: 1.1rem;
-  color: rgb(95, 94, 94);
-}
+
 
 @mixin button-style {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 600;
   color: white;
   border-radius: 3rem;
   background: radial-gradient(ellipse farthest-corner at top left, $color-secondary, $color-primary);
   border: none;
-  box-shadow: 0px 4px 4px $color-medium;
+  box-shadow: 2px 4px 4px #c0c0c0;
   padding: 1rem 1.5rem;
+  cursor: pointer;
+  transition-duration: .25s;
+  &:hover {
+    opacity: 0.8;
+    box-shadow: 2px 4px 4px #929292;
+  }
+}
+
+@mixin new-style {
+  position :absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: $color-tertiary;
+  border-radius: 0.2rem;
+  color:hsl(165, 93%, 24%);
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+}
+@mixin like-click {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  font-weight: 800;
+  
+
 }
