--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -45,6 +45,13 @@
     border: none;
     font-size: 1rem;
     font-weight: 800;
+    cursor: pointer;
+    &:hover {
+      background: hsl(267, 66%, 60%, 0.1)
+    }
+    &:hover i{
+      color: $color-primary;
+    }
 
     i {
       color: gray;
@@ -89,6 +96,7 @@
     background-color: white;
     box-shadow: 0px 2px 12px 4px $color-medium;
     text-decoration: none;
+    
 
     .restaurant__describ {
       padding-left: 1rem;
@@ -107,6 +115,12 @@
       bottom: 2rem;
       font-size: 1.5rem;
       color: black;
+      &:hover {
+        @include like-click;
+      }
+    }
+    .new {
+      @include new-style;
     }
   }
 
