--- a/style.css
+++ b/style.css
@@ -8,17 +8,12 @@ h2,
 h3,
 li {
   font-family: "Roboto", "sans-serif";
+  color: black;
 }
 
 h2 {
   font-size: 1.5rem;
   font-weight: 800;
-}
-
-p {
-  font-weight: 400;
-  font-size: 1.1rem;
-  color: #5f5e5e;
 }
 
 body {
@@ -43,13 +38,13 @@ li {
 
 footer {
   background-color: #353535;
-  color: white;
 }
 footer h3 {
   font-family: "Shrikhand", "sans-serif";
   font-size: 1.3rem;
   font-weight: 200;
   padding-left: 2rem;
+  color: white;
 }
 footer li {
   font-size: 1rem;
@@ -93,13 +88,19 @@ footer li i {
 }
 .explorer button {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 600;
   color: white;
   border-radius: 3rem;
   background: radial-gradient(ellipse farthest-corner at top left, #ff79da, #9356dc);
   border: none;
-  box-shadow: 0px 4px 4px #e8e8e8;
+  box-shadow: 2px 4px 4px #c0c0c0;
   padding: 1rem 1.5rem;
+  cursor: pointer;
+  transition-duration: 0.25s;
+}
+.explorer button:hover {
+  opacity: 0.8;
+  box-shadow: 2px 4px 4px #929292;
 }
 
 .steps {
@@ -119,6 +120,13 @@ footer li i {
   border: none;
   font-size: 1rem;
   font-weight: 800;
+  cursor: pointer;
+}
+.steps button:hover {
+  background: rgba(146, 86, 220, 0.1);
+}
+.steps button:hover i {
+  color: #9356dc;
 }
 .steps button i {
   color: gray;
@@ -176,6 +184,22 @@ footer li i {
   bottom: 2rem;
   font-size: 1.5rem;
   color: black;
+}
+.restaurants .restaurants__form .fa-heart:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 800;
+}
+.restaurants .restaurants__form .new {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: #98e2cf;
+  border-radius: 0.2rem;
+  color: #04765a;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
 }
 .restaurants .restaurant__picture {
   height: 12rem;
