--- a/style.css
+++ b/style.css
@@ -220,4 +220,108 @@ footer li i {
   background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 
+.restaurants__style {
+  position: relative;
+  background-color: #f4f4f4;
+}
+.restaurants__style #restaurant__name {
+  padding-right: auto;
+  text-align: left;
+  background: none;
+}
+.restaurants__style .restaurant__describ {
+  padding: 1rem 0 3rem 0;
+  margin-top: -2rem;
+  background-color: #f4f4f4;
+  border-radius: 2rem 2rem 0 0;
+  padding-left: 1rem;
+}
+.restaurants__style .fa-heart {
+  position: absolute;
+  right: 2.5rem;
+  bottom: 4rem;
+  font-size: 2rem;
+  color: black;
+}
+.restaurants__style .fa-heart:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 800;
+}
+.restaurants__style .new {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: #98e2cf;
+  border-radius: 0.2rem;
+  color: #04765a;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+}
+
+.restaurant__picture {
+  height: 12rem;
+  background-size: cover;
+  background-position: center;
+}
+
+.picture1 {
+  background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+
+.picture2 {
+  background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+
+.picture3 {
+  background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+}
+
+.picture4 {
+  background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
+
+.background {
+  background-color: #f4f4f4;
+}
+
+.menu__part {
+  margin-bottom: 0.8rem;
+  padding: 2rem 1rem 0 1rem;
+  text-transform: uppercase;
+}
+
+.food {
+  background-color: white;
+  border-radius: 1rem;
+  margin: 1rem 1rem 0 1rem;
+  box-shadow: 0px 2px 12px 4px #e8e8e8;
+}
+.food .prix {
+  padding-right: 0.5rem;
+  font-weight: 600;
+}
+.food h3 {
+  padding: 1rem 1rem 0 1rem;
+  margin: 0;
+}
+.food .food__describ {
+  display: flex;
+  justify-content: space-between;
+}
+.food p {
+  padding: 0.5rem 1rem 1rem 1rem;
+  margin: 0;
+}
+
+.green-trait {
+  position: relative;
+  left: 1rem;
+  top: -0.5rem;
+  height: 5px;
+  width: 60px;
+  border-top: 5px solid #98e2cf;
+}
+
 /*# sourceMappingURL=style.css.map */
