--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -47,9 +47,9 @@
     font-weight: 800;
     cursor: pointer;
     &:hover {
-      background: hsl(267, 66%, 60%, 0.1)
+      background: hsl(267, 66%, 60%, 0.1);
     }
-    &:hover i{
+    &:hover i {
       color: $color-primary;
     }
 
@@ -96,7 +96,6 @@
     background-color: white;
     box-shadow: 0px 2px 12px 4px $color-medium;
     text-decoration: none;
-    
 
     .restaurant__describ {
       padding-left: 1rem;
