--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,6 +9,10 @@ $color-tertiary: hsl(165, 56%, 74%);
 $color-darkest: #353535;
 $color-medium: lighten($color-darkest, 70);
 $color-light: lighten($color-darkest, 75);
+$anim-dur: 2000ms;
+$anim-delay: $anim-dur / 10;
+
+
 
 span,
 p,
@@ -22,3 +26,5 @@ h2 {
   font-size: 1.5rem;
   font-weight: 800;
 }
+
+
