réalisation de l'animation icon coeur

--- a/sass/pages/_restaurants-style.scss
+++ b/sass/pages/_restaurants-style.scss
@@ -1,44 +1,7 @@
-.restaurants__style {
+.restaurant {
   position: relative;
   background-color: $color-light;
-  #restaurant__name {
-    padding-right: auto;
-    text-align: left;
-    background: none;
-  }
-  .restaurant__describ {
-    padding: 1rem 0 3rem 0;
-    margin-top: -2rem;
-    background-color: $color-light;
-    border-radius: 2rem 2rem 0 0;
-    padding-left: 1rem;
-  }
-  .fa-heart {
-    position: absolute;
-    right: 2.5rem;
-    bottom: 4rem;
-    font-size: 2rem;
-    color: black;
-    &:hover {
-      &::after {
-        opacity: 1;
-      }
-      //@include like-click;
-    }
-    &::after {
-      content: "";
-      opacity: 0;
-      transition: 0.5s;
-      background-color: transparent;
-      background: linear-gradient(0deg, $color-primary, $color-secondary);
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-    }
-  }
-  .restaurant__picture {
+  &__picture {
     height: 12rem;
     background-size: cover;
     background-position: center;
@@ -55,6 +18,24 @@
   .picture4 {
     background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
   }
+  #restaurant__name {
+    padding-right: auto;
+    text-align: left;
+    background: none;
+  }
+  &__describ {
+    padding: 1rem 0 3rem 0;
+    margin-top: -2rem;
+    background-color: $color-light;
+    border-radius: 2rem 2rem 0 0;
+    padding-left: 1rem;
+  }
+  i {
+    @include like-click;
+    right: 2.5rem;
+    bottom: 4rem;
+  }
+
 }
 
 .background {
