--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -54,9 +54,9 @@
     }
 
     i {
+      padding-right: 2rem;
       color: gray;
       font-size: 1.3rem;
-      padding-right: 1rem;
     }
 
     span {
@@ -77,7 +77,7 @@
   }
 }
 
-.restaurants {
+.restaurants-index {
   display: flex;
   flex-direction: column;
   background-color: $color-light;
@@ -89,56 +89,51 @@
     padding-left: 1rem;
   }
 
-  .restaurants__form {
+  .restaurants {
     position: relative;
     border-radius: 1rem;
     margin: 0 1rem 1rem 1rem;
     background-color: white;
     box-shadow: 0px 2px 12px 4px $color-medium;
     text-decoration: none;
-
-    .restaurant__describ {
+    &__describ {
       padding-left: 1rem;
-    }
-    h3 {
-      font-weight: bold;
-      color: black;
-      margin-bottom: 0.5rem;
-    }
-    p {
-      margin-top: 0;
-    }
-    .fa-heart {
-      position: absolute;
-      right: 1.5rem;
-      bottom: 2rem;
-      font-size: 1.5rem;
-      color: black;
-      &:hover {
+      h3 {
+        font-weight: bold;
+        color: black;
+        margin-bottom: 0.5rem;
+      }
+      p {
+        margin-top: 0;
+      }
+      i {
+        right: 2.5rem;
+        bottom: 2rem;
         @include like-click;
       }
     }
+
     .new {
       @include new-style;
     }
-  }
 
-  .restaurant__picture {
-    height: 12rem;
-    border-radius: 0.8rem 0.8rem 0 0;
-    background-size: cover;
-    background-position: center;
-  }
-  .picture1 {
-    background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-  }
-  .picture2 {
-    background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
-  }
-  .picture3 {
-    background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-  }
-  .picture4 {
-    background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+    &__picture {
+      height: 12rem;
+      border-radius: 0.8rem 0.8rem 0 0;
+      background-size: cover;
+      background-position: center;
+    }
+    .picture1 {
+      background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+    }
+    .picture2 {
+      background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
+    }
+    .picture3 {
+      background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+    }
+    .picture4 {
+      background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+    }
   }
 }
