--- a/style.css
+++ b/style.css
@@ -19,14 +19,10 @@ h2 {
 @keyframes food-animation {
   from {
     transform: translateY(50px);
-  }
-  to {
-    transform: translateY(0);
-  }
-  from {
     opacity: 0;
   }
   to {
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -143,9 +139,9 @@ footer li i {
   color: #9356dc;
 }
 .steps button i {
+  padding-right: 2rem;
   color: gray;
   font-size: 1.3rem;
-  padding-right: 1rem;
 }
 .steps button span {
   padding-right: 2rem;
@@ -162,7 +158,7 @@ footer li i {
   font-weight: 400;
 }
 
-.restaurants {
+.restaurants-index {
   display: flex;
   flex-direction: column;
   background-color: #f4f4f4;
@@ -170,10 +166,10 @@ footer li i {
   padding-bottom: 3rem;
   justify-content: flex-around;
 }
-.restaurants h2 {
+.restaurants-index h2 {
   padding-left: 1rem;
 }
-.restaurants .restaurants__form {
+.restaurants-index .restaurants {
   position: relative;
   border-radius: 1rem;
   margin: 0 1rem 1rem 1rem;
@@ -181,31 +177,48 @@ footer li i {
   box-shadow: 0px 2px 12px 4px #e8e8e8;
   text-decoration: none;
 }
-.restaurants .restaurants__form .restaurant__describ {
+.restaurants-index .restaurants__describ {
   padding-left: 1rem;
 }
-.restaurants .restaurants__form h3 {
+.restaurants-index .restaurants__describ h3 {
   font-weight: bold;
   color: black;
   margin-bottom: 0.5rem;
 }
-.restaurants .restaurants__form p {
+.restaurants-index .restaurants__describ p {
   margin-top: 0;
 }
-.restaurants .restaurants__form .fa-heart {
-  position: absolute;
-  right: 1.5rem;
+.restaurants-index .restaurants__describ i {
+  right: 2.5rem;
   bottom: 2rem;
-  font-size: 1.5rem;
+  position: absolute;
+  font-size: 2rem;
+  background: transparent;
+  border: none;
   color: black;
 }
-.restaurants .restaurants__form .fa-heart:hover {
-  background: linear-gradient(0deg, #9356dc, #ff79da);
-  opacity: 1;
-  transition: 0.5s;
-  font-weight: 600;
+.restaurants-index .restaurants__describ i:hover {
+  font-weight: 800;
+  transition: 500ms;
 }
-.restaurants .restaurants__form .new {
+.restaurants-index .restaurants__describ i:hover::after {
+  opacity: 1;
+  font-weight: 800;
+}
+.restaurants-index .restaurants__describ i::after {
+  content: "";
+  opacity: 0;
+  transition: 500ms;
+  background-color: transparent;
+  background: linear-gradient(0deg, #9356dc, #ff79da);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  mix-blend-mode: lighten;
+}
+.restaurants-index .restaurants .new {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -215,55 +228,79 @@ footer li i {
   font-weight: 600;
   padding: 0.5rem 1rem;
 }
-.restaurants .restaurant__picture {
+.restaurants-index .restaurants__picture {
   height: 12rem;
   border-radius: 0.8rem 0.8rem 0 0;
   background-size: cover;
   background-position: center;
 }
-.restaurants .picture1 {
+.restaurants-index .restaurants .picture1 {
   background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
 }
-.restaurants .picture2 {
+.restaurants-index .restaurants .picture2 {
   background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
 }
-.restaurants .picture3 {
+.restaurants-index .restaurants .picture3 {
   background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
 }
-.restaurants .picture4 {
+.restaurants-index .restaurants .picture4 {
   background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 
-.restaurants__style {
+.restaurant {
   position: relative;
   background-color: #f4f4f4;
 }
-.restaurants__style #restaurant__name {
+.restaurant__picture {
+  height: 12rem;
+  background-size: cover;
+  background-position: center;
+}
+.restaurant .picture1 {
+  background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+.restaurant .picture2 {
+  background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+.restaurant .picture3 {
+  background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+}
+.restaurant .picture4 {
+  background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
+.restaurant #restaurant__name {
   padding-right: auto;
   text-align: left;
   background: none;
 }
-.restaurants__style .restaurant__describ {
+.restaurant__describ {
   padding: 1rem 0 3rem 0;
   margin-top: -2rem;
   background-color: #f4f4f4;
   border-radius: 2rem 2rem 0 0;
   padding-left: 1rem;
 }
-.restaurants__style .fa-heart {
+.restaurant i {
   position: absolute;
+  font-size: 2rem;
+  background: transparent;
+  border: none;
+  color: black;
   right: 2.5rem;
   bottom: 4rem;
-  font-size: 2rem;
-  color: black;
 }
-.restaurants__style .fa-heart:hover::after {
+.restaurant i:hover {
+  font-weight: 800;
+  transition: 500ms;
+}
+.restaurant i:hover::after {
   opacity: 1;
+  font-weight: 800;
 }
-.restaurants__style .fa-heart::after {
+.restaurant i::after {
   content: "";
   opacity: 0;
-  transition: 0.5s;
+  transition: 500ms;
   background-color: transparent;
   background: linear-gradient(0deg, #9356dc, #ff79da);
   position: absolute;
@@ -271,23 +308,7 @@ footer li i {
   left: 0;
   height: 100%;
   width: 100%;
-}
-.restaurants__style .restaurant__picture {
-  height: 12rem;
-  background-size: cover;
-  background-position: center;
-}
-.restaurants__style .picture1 {
-  background-image: url("images/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-}
-.restaurants__style .picture2 {
-  background-image: url("images/stil-u2Lp8tXIcjw-unsplash.jpg");
-}
-.restaurants__style .picture3 {
-  background-image: url("images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-}
-.restaurants__style .picture4 {
-  background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+  mix-blend-mode: lighten;
 }
 
 .background {
