--- a/sass/pages/_restaurants-style.scss
+++ b/sass/pages/_restaurants-style.scss
@@ -19,6 +19,7 @@
     background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
   }
   #restaurant__name {
+    padding-left: 1rem;
     padding-right: auto;
     text-align: left;
     background: none;
@@ -35,7 +36,6 @@
     right: 2.5rem;
     bottom: 4rem;
   }
-
 }
 
 .background {
@@ -49,13 +49,14 @@
         animation-delay: 600ms * $i;
       }
     }
-    
   }
+
   .menu__part {
     margin-bottom: 0.8rem;
     padding: 2rem 1rem 0 1rem;
     text-transform: uppercase;
   }
+
   .green-trait {
     position: relative;
     left: 1rem;
@@ -69,9 +70,11 @@
         animation-delay: 500ms * $i;
       }
     }
-
   }
+
   .food {
+    position: relative;
+    padding-right: auto;
     opacity: 0;
     background-color: white;
     border-radius: 1rem;
@@ -84,21 +87,63 @@
         animation-delay: 300ms * $i;
       }
     }
-    .prix {
-      padding-right: 0.5rem;
-      font-weight: 600;
-    }
+
     h3 {
       padding: 1rem 1rem 0 1rem;
-      margin: 0;
+      margin-bottom: 0.3rem;
     }
+
     .food__describ {
       display: flex;
       justify-content: space-between;
+      p {
+        margin-top: 0;
+        padding: 0 0 0 1rem;
+      }
+      .prix {
+        padding-right: 1rem;
+        font-weight: 600;
+        margin-top: 0;
+        transition: transform 500ms;
+      }
     }
-    p {
-      padding: 0.5rem 1rem 1rem 1rem;
-      margin: 0;
+
+    .validated {
+      display: flex;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 5rem;
+      transform-origin: 100% 0;
+      transform: scaleX(0);
+      transition: transform 500ms;
+      box-sizing: border-box;
+      justify-content: center;
+      align-items: center;
+      background-color: $color-tertiary;
+      border-radius: 0 1rem 1rem 0;
+
+      .fa-check-circle {
+        position: relative;
+        color: white;
+        font-size: 2rem;
+        transform: translateX(0) rotate(0);
+        transition: transform 500ms ease-in-out;
+      }
+    }
+
+    &:hover .validated {
+      opacity: 1;
+      transform: scaleX(100%);
+    }
+    &:hover .fa-check-circle {
+      transform: translateX(-0.1rem) rotate(1turn);
+    }
+
+    &:hover .prix {
+      transform: translateX(-5rem);
     }
   }
   .order {
@@ -106,7 +151,7 @@
     text-align: center;
     button {
       @include button-style;
-      padding: 1rem 2rem;
+      padding: 1rem 3rem;
     }
   }
 }
