--- a/sass/pages/_restaurants-style.scss
+++ b/sass/pages/_restaurants-style.scss
@@ -1,3 +1,14 @@
+.fa-arrow-left{
+  color: black;
+  position: absolute;
+  font-size: 1.5rem;
+  top: 1.5rem;
+  left: 2rem;
+  cursor: pointer;
+  &:hover {
+    color: $color-primary;
+  }
+}
 .restaurant {
   position: relative;
   background-color: $color-light;
@@ -19,13 +30,13 @@
     background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
   }
   #restaurant__name {
-    padding-left: 1rem;
+    padding-left: 0.5rem;
     padding-right: auto;
     text-align: left;
     background: none;
   }
   &__describ {
-    padding: 1rem 0 3rem 0;
+    padding: 1rem 0 0 0;
     margin-top: -2rem;
     background-color: $color-light;
     border-radius: 2rem 2rem 0 0;
@@ -73,6 +84,10 @@
   }
 
   .food {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
     position: relative;
     padding-right: auto;
     opacity: 0;
@@ -88,27 +103,37 @@
       }
     }
 
-    h3 {
-      padding: 1rem 1rem 0 1rem;
-      margin-bottom: 0.3rem;
-    }
-
     .food__describ {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      h3 {
+        padding-left: 1rem;
+        margin-bottom: 0.3rem;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
       p {
         margin-top: 0;
         padding: 0 0 0 1rem;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
-      .prix {
-        padding-right: 1rem;
-        font-weight: 600;
-        margin-top: 0;
-        transition: transform 500ms;
-      }
+      
+    }
+    .prix {
+      display: flex;
+      padding: 2rem 1.5rem 0 1rem;
+      font-weight: 600;
+      margin-top: 0;
+      transition: transform 500ms;
     }
 
-    .validated {
+    .checked {
       display: flex;
       opacity: 0;
       position: absolute;
@@ -134,7 +159,7 @@
       }
     }
 
-    &:hover .validated {
+    &:hover .checked {
       opacity: 1;
       transform: scaleX(100%);
     }
@@ -144,6 +169,7 @@
 
     &:hover .prix {
       transform: translateX(-5rem);
+      padding-left: 6rem;
     }
   }
   .order {
