--- a/style.css
+++ b/style.css
@@ -247,6 +247,18 @@ footer li i {
   background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 
+.fa-arrow-left {
+  color: black;
+  position: absolute;
+  font-size: 1.5rem;
+  top: 1.5rem;
+  left: 2rem;
+  cursor: pointer;
+}
+.fa-arrow-left:hover {
+  color: #9356dc;
+}
+
 .restaurant {
   position: relative;
   background-color: #f4f4f4;
@@ -269,13 +281,13 @@ footer li i {
   background-image: url("images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 .restaurant #restaurant__name {
-  padding-left: 1rem;
+  padding-left: 0.5rem;
   padding-right: auto;
   text-align: left;
   background: none;
 }
 .restaurant__describ {
-  padding: 1rem 0 3rem 0;
+  padding: 1rem 0 0 0;
   margin-top: -2rem;
   background-color: #f4f4f4;
   border-radius: 2rem 2rem 0 0;
@@ -353,6 +365,10 @@ footer li i {
   animation-delay: 1500ms;
 }
 .background .food {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
   position: relative;
   padding-right: auto;
   opacity: 0;
@@ -393,25 +409,35 @@ footer li i {
 .background .food--10 {
   animation-delay: 3000ms;
 }
-.background .food h3 {
-  padding: 1rem 1rem 0 1rem;
-  margin-bottom: 0.3rem;
-}
 .background .food .food__describ {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.background .food .food__describ h3 {
+  padding-left: 1rem;
+  margin-bottom: 0.3rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .background .food .food__describ p {
   margin-top: 0;
   padding: 0 0 0 1rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
-.background .food .food__describ .prix {
-  padding-right: 1rem;
+.background .food .prix {
+  display: flex;
+  padding: 2rem 1.5rem 0 1rem;
   font-weight: 600;
   margin-top: 0;
   transition: transform 500ms;
 }
-.background .food .validated {
+.background .food .checked {
   display: flex;
   opacity: 0;
   position: absolute;
@@ -428,14 +454,14 @@ footer li i {
   background-color: #98e2cf;
   border-radius: 0 1rem 1rem 0;
 }
-.background .food .validated .fa-check-circle {
+.background .food .checked .fa-check-circle {
   position: relative;
   color: white;
   font-size: 2rem;
   transform: translateX(0) rotate(0);
   transition: transform 500ms ease-in-out;
 }
-.background .food:hover .validated {
+.background .food:hover .checked {
   opacity: 1;
   transform: scaleX(100%);
 }
@@ -444,6 +470,7 @@ footer li i {
 }
 .background .food:hover .prix {
   transform: translateX(-5rem);
+  padding-left: 6rem;
 }
 .background .order {
   margin: 4rem auto;
