--- a/sass/pages/_restaurants-style.scss
+++ b/sass/pages/_restaurants-style.scss
@@ -1,4 +1,4 @@
-.fa-arrow-left{
+.fa-arrow-left {
   color: black;
   position: absolute;
   font-size: 1.5rem;
@@ -13,7 +13,7 @@
   position: relative;
   background-color: $color-light;
   &__picture {
-    height: 12rem;
+    height: 18rem;
     background-size: cover;
     background-position: center;
   }
@@ -45,12 +45,17 @@
   i {
     @include like-click;
     right: 2.5rem;
-    bottom: 4rem;
+    bottom: 1rem;
   }
 }
 
 .background {
   background-color: $color-light;
+  .media-flex {
+  @media only screen and (min-width: 992px) {
+    @include media-style;
+  }
+}
   .menu {
     opacity: 0;
     animation: food-animation 600ms;
@@ -60,17 +65,22 @@
         animation-delay: 600ms * $i;
       }
     }
+    @media only screen and (min-width: 992px) {
+      flex: 1;
+      max-width: 33%;
+    }
   }
 
   .menu__part {
     margin-bottom: 0.8rem;
-    padding: 2rem 1rem 0 1rem;
+    padding: 2rem 1rem 0 1.5rem;
     text-transform: uppercase;
+    font-weight: 400;
   }
 
   .green-trait {
     position: relative;
-    left: 1rem;
+    left: 1.5rem;
     top: -0.3rem;
     width: 60px;
     border-top: 4px solid $color-tertiary;
@@ -123,8 +133,8 @@
         text-overflow: ellipsis;
         overflow: hidden;
       }
-      
     }
+
     .prix {
       display: flex;
       padding: 2rem 1.5rem 0 1rem;
@@ -158,7 +168,6 @@
         transition: transform 500ms ease-in-out;
       }
     }
-
     &:hover .checked {
       opacity: 1;
       transform: scaleX(100%);
@@ -166,7 +175,6 @@
     &:hover .fa-check-circle {
       transform: translateX(-0.1rem) rotate(1turn);
     }
-
     &:hover .prix {
       transform: translateX(-5rem);
       padding-left: 6rem;
@@ -175,9 +183,9 @@
   .order {
     margin: 4rem auto;
     text-align: center;
-    button {
-      @include button-style;
-      padding: 1rem 3rem;
-    }
   }
+button {
+  @include button-style;
+  padding: 1rem 3rem;
 }
+  }
