--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ footer li i {
 }
 
 section,
-header {
-  animation: background-opacity 4000ms;
+.title {
+  animation: background-opacity 3000ms;
 }
 
 .spinner::before {
@@ -131,7 +131,7 @@ header {
   margin-left: -30px;
   border-radius: 50%;
   border-right: 4px solid transparent;
-  animation: spinner 4000ms linear;
+  animation: spinner 3000ms linear;
 }
 
 .location {
