ajout des prefixer + footer: alignement h3 sur li

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -70,3 +70,8 @@
     mix-blend-mode: lighten;
   }
 }
+@mixin three-dot {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
