--- a/sass/pages/_restaurants-style.scss
+++ b/sass/pages/_restaurants-style.scss
@@ -116,22 +116,16 @@
     .food__describ {
       display: flex;
       flex-direction: column;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      @include three-dot;
       h3 {
         padding-left: 1rem;
         margin-bottom: 0.3rem;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
+        @include three-dot;
       }
       p {
         margin-top: 0;
-        padding: 0 0 0 1rem;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
+        padding-left: 1rem;
+        @include three-dot;
       }
     }
 
