mise au propre du code + passage install sass en devDependencies dans package.json

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -54,14 +54,12 @@
   }
   &:hover::after {
     opacity: 1;
-    font-weight: 800;
   }
   &::after {
     content: "";
     opacity: 0;
     transition: 500ms;
-    background-color: transparent;
-    background: linear-gradient(0deg, $color-primary, $color-secondary);
+    background: linear-gradient(0deg, $color-secondary, $color-primary);
     position: absolute;
     top: 0;
     left: 0;
